# ArcWorkpiece-Measurement-System

./: .gitignore  1.md  Dockerfile  README.md  check_system.sh  make_executable.sh  push.bat  requirements.txt  requirements_auth.txt  restart_auth.sh  run.sh  run_dev.sh  setup_auth.sh  setup_initial.sh  start_services.sh
.devcontainer/: Dockerfile  add.md  devcontainer.json  docker-compose.yml  requirements.txt
PointCloud/: Registration.py  base.py  calibrate.py  segment.py  transformation.py
Simulation/: PcaAxis.py  PcaTest.py  fit_test.py  lms_minimize_test.py  minimize_test.py  pca_minimize_test.py  points_gen.py  ransc_minimize_test.py  最小二乘圆柱轴.py
UserInterface/: PointCouldProgress.py  RegionSelector.py  arc_fitting_processor.py  arc_line_processor.py  config.py  cylinder_processor.py  fastapi_test.py  fastapi_test1.py  flask_test.py  package-lock.json  plt_font.py  plt_test.py  point_cloud_denoiser.py  point_cloud_grouper.py  point_cloud_manager.py  point_cloud_processor.py  temp_cloud_manager.py  test.py  test_arc_line_processor.py  use.xml
algorithm/: PreciseArcFitting.py  Ransc_circle.py  arc_fitting_comparison.py  axis_projection.py  circle_arc.py  fitting_comparison_results.csv  projection.py  test.py
antd-demo/: .env  .env.example  (+7 more)
pypcl_algorithms/: .appveyor.yml  CMakeLists.txt  README.md  setup.py
pypcl_algorithms/conda.recipe/: meta.yaml
pypcl_algorithms/docs/: conf.py  index.rst
pypcl_algorithms/pybind11/: README.rst
pypcl_algorithms/src/: cylinder_fitting.cpp  main.cpp
pypcl_algorithms/tests/: test_basic.py  test_cylinder.py
(+114 files in other folders)
